[package]
name = "askii"
description = "TUI based ASCII diagram editor."
version = "0.5.5-pre2"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"

license = "Apache-2.0 OR MIT"
homepage = "https://github.com/nytopop/askii"
repository = "https://github.com/nytopop/askii.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.4"
log = "0.4.8"
lazy_static = "1.4.0"
parking_lot = "0.9.0"
line_drawing = "0.8.0"
pathfinding = "2.0.0"
num-traits = "0.2.8"
clipboard = "0.5.0"

smallvec = ">=0"
unicode-segmentation = ">=1"
unicode-width = ">=0"
enumset = ">=0"

[dependencies.cursive]
git = "https://github.com/gyscos/cursive.git"
rev = "f1fe477"
default-features = false
features = ["crossterm-backend", "unstable_scroll"]
