[package]
name = "askii"
description = "TUI based ASCII diagram editor."
version = "0.5.6"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"

license = "Apache-2.0 OR MIT"
homepage = "https://github.com/nytopop/askii"
repository = "https://github.com/nytopop/askii.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
lazy_static = "1.4"
parking_lot = "0.9"
line_drawing = "0.8"
pathfinding = "2.0"
num-traits = "0.2"
clipboard = "0.5"
cursive_buffered_backend = "0.3"

[dependencies.cursive]
version = "0.14"
default-features = false
features = ["crossterm-backend", "unstable_scroll"]
